# sol-ctf-framework

./: .gitignore  Cargo.toml
examples/moar-horse-5/program/: Cargo.toml  Makefile
examples/moar-horse-5/program/src/: entrypoint.rs  lib.rs  processor.rs
examples/moar-horse-5/server/: Cargo.toml  flag.txt
examples/moar-horse-5/server/src/: main.rs
examples/moar-horse-5/solve/: Cargo.toml  solve.py
examples/moar-horse-5/solve/src/: processor.rs
examples/solfire/: Cargo.toml  main.rs
examples/solfire/src/: main.rs
src/: lib.rs
