[package]
name = "sol-ctf-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc-framework = { git = "https://github.com/otter-sec/solana-poc-framework" }
tempfile = "*"
sha2 = "*"
rand = "0.7.3"

[dev-dependencies]
threadpool = "1.8.1"
anchor-client = "0.23.0"
