[package]
name = "sol-ctf-framework"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/otter-sec/sol-ctf-framework"
description = "A framework for building solana based capture the flag challenges"
repository = "https://github.com/otter-sec/sol-ctf-framework"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.11.5"
solana-program-test = "1.11.5"
tempfile = "3.2.0"
sha2 = "0.10.2"
rand = "0.7.3"

[dev-dependencies]
tokio = { version = "1.14.1", features = ["full"] }
